Increased font size, fixed KB image resizing, reduced whitespace.

--- a/sendinel/media/css/numpad.css
+++ b/sendinel/media/css/numpad.css
@@ -39,7 +39,7 @@ a.subselectable {
 }
 
 .control-buttons {
-    height:20px;
+    height: 1.5em;
 }
 
 .select-div {
